--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply mx-auto max-w-[1360px] bg-grey-light px-[30px] sm:px-10 relative;
+}
+
+@layer components {
+  .btn-primary {
+    @apply flex h-11 items-center rounded-full bg-purple pl-6 pr-[30px] text-xs font-medium text-white;
+  }
+}
